crates/deadline-cli/tests/cli/snapshots/cli__job_logs__job_logs_no_sessions_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli/job_logs.rs
info:
  program: deadline
  args:
    - job
    - logs
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61506"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61506"
    AWS_ENDPOINT_URL_STS: "http://localhost:61506"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpqQtF84/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpqQtF84
---
success: false
exit_code: 1
----- stdout -----
No sessions found for job job-aaa

----- stderr -----
