crates/deadline-cli/tests/cli/snapshots/cli__job_logs__job_logs_session_action_id_invalid_format_errors.snap
---
source: crates/deadline-cli/tests/cli/job_logs.rs
info:
  program: deadline
  args:
    - job
    - logs
    - "--session-action-id"
    - not-a-valid-id
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:56565"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:56565"
    AWS_ENDPOINT_URL_S3: "http://localhost:56565"
    AWS_ENDPOINT_URL_STS: "http://localhost:56565"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpPBuByS/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpPBuByS
---
success: false
exit_code: 1
----- stdout -----
Invalid session action ID format: 'not-a-valid-id'. Expected format: sessionaction-{uuid}-{number}

----- stderr -----
